# plip-rs

./: .gitignore  CHANGELOG.md  COMMANDS.md  Cargo.toml  EXPERIMENT_N50_DESIGN.md  INTERVENTION_ROADMAP.md  LICENSE  README.md  RIGOR_EXPERIMENT.md  STANDALONE_EXTRACTION_ROADMAP.md  STEERING_RESULTS.md  run.ps1  test_statistical_attention.ps1
.github/workflows/: ci.yml  container.yml
corpus/: README.md  attention_samples.json  attention_samples_bigcode_starcoder2_3b.json  attention_samples_google_codegemma_7b_it.json  attention_samples_poetry.json  attention_samples_universal.json  generation_prompts_n50.json  samples.json  semantic_categories.json  test_attention_samples.json
docker/: Dockerfile  docker-compose.yml
docs/: RIKEN_INSTRUCTIONS.md  RWKV6_MATHEMATICAL_FOUNDATIONS.md  TEST_CHECKLIST.md
docs/experiments/: ABLATION_RESULTS.md  EXPERIMENT_N50_RESULTS.md  RIGOR_EXPERIMENT.md  STEERING_RESULTS.md
docs/planning-in-poems/: 01-detection.md  02-steering.md  03-figure13-replication.md  README.md
docs/roadmaps/: ABLATION_AMPLIFICATION_ROADMAP.md  ROADMAP-v1.1-model-expansion.md
examples/: ablation_experiment.rs  analyze_gained.rs  analyze_suppress_inject.rs  attention_ablation.rs  attention_patterns.rs  clt_encode.rs  clt_logit_shift.rs  convert_corpus.rs  debug_config.rs  debug_generation.rs  debug_weights.rs  evaluate_steering.rs  inference.rs  inspect_clt.rs  layer_scan.rs  layer_scan_universal.rs  list_models.rs  list_tensors.rs  load_model.rs  logit_lens.rs  multi_sample_attention.rs  poetry_attention_steering.rs  poetry_category_steering.rs  poetry_clt_steering.rs  poetry_layer_scan.rs  reproduce_pipeline.rs  state_ablation_experiment.rs  state_steering_experiment.rs  state_steering_generate.rs  state_steering_persistence.rs  statistical_attention.rs  steering_calibrate.rs  steering_experiment.rs  steering_generate.rs  steering_generate_n50.rs  steering_sweep.rs  suppress_inject_sweep.rs  test_emergence.rs  tokenize.rs  validate_clt.rs  (+5 more)
outputs/: ablation_codegemma_layer5.json  ablation_layer1_full.json  ablation_qwen7b_layer2.json  ablation_qwen7b_layer_scan.txt  ablation_starcoder2_layer0.json  attention_steering_results.json  category_probe_full.json  clt_steering_results.json  full_results_layer12.json  full_results_layer12_corrected.json  layer_scan.json  layer_scan_Qwen_Qwen2.5_Coder_3B_Instruct.json  layer_scan_codegemma_7b.json  layer_scan_starcoder2_3b.json  layer_scan_universal_RWKV_v6_Finch_1B6_HF.json  layer_scan_universal_codegemma.json  layer_scan_universal_codellama_CodeLlama_7b_hf.json  layer_scan_universal_microsoft_Phi_3_mini_4k_instruct.json  layer_scan_universal_qwen3b.json  layer_scan_universal_qwen7b.json  layer_scan_universal_starcoder2.json  method3_results.json  method4_results.json  method5_results.json  method6_test.json  plip_results.json  poetry_layer_scan_google_gemma_2_2b.json  position_sweep.json  rhyme_pairs_all_layers.json  state_ablation_layer2.json  state_steering_rwkv6.json  stats_codegemma_7b.json  stats_qwen_3b.json  stats_starcoder2_3b.json  steering_comparison.json  steering_sweep.json  steering_sweep_multilayer.json  suppress_inject_sweep.json  test_statistical_attention.json  test_statistical_attention_v2.json  (+4 more)
outputs/phi3_experiment/: plip_results.json
results/: n50_scale_3.0.json
scripts/: clt_reference.py  clt_reference_426k.json  convert_rwkv_to_safetensors.py  generate_poetry_corpus.py  review_poetry_corpus.py  rwkv6_reference.json  rwkv6_validation.py
src/: attention.rs  cache.rs  clt.rs  corpus.rs  experiment.rs  forward.rs  forward_gemma.rs  forward_gemma2.rs  forward_llama.rs  forward_phi3.rs  forward_qwen2.rs  forward_rwkv6.rs  intervention.rs  kv_cache.rs  lib.rs  logit_lens.rs  main.rs  masks.rs  model.rs  positioning.rs  probe.rs  steering.rs  tokenizer_rwkv.rs
tests/: integration.rs
